<resources>
    <string name="app_name">Staffin</string>

    <string name="login_tv1">Login with Mobile Number</string>
    <string name="login_tv2">Lorem Ipsum is simply dummy text of the printing and .</string>
    <string name="login_tv3">Forgot Password ?</string>

    <string name="SignUp_tv1">Sign up with  Mobile Number </string>

    <string name="Forgot_tv1">Forgot Password with  Mobile Number </string>


    <string name="main_tv1">Total Employees</string>
    <string name="main_tv2">Employee Attendance</string>
    <string name="main_tv3">Events</string>
    <string name="main_tv4">Payroll</string>
    <string name="main_tv5">Calendar Settings</string>

    <string name="onBoardingTxt1">Welcome To Fox</string>
    <string name="OnBoardingTxt2">Staffin</string>
    <string name="OnBoardingTxt3">Lorem Ipsum is simply dummy text of /\nhe printing and .</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="my_map_api_key">AIzaSyDx5fNN72sH7H_jUO48nIQrzSx58VBsYI8</string>

</resources>