<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="20dp"
        android:gravity="center"
        android:weightSum="2"
        android:layout_height="wrap_content" >


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardElevation="15dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="15dp"
            android:layout_weight="1"
            android:layout_height="160dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="80dp"
                    android:background="@drawable/main_image_bg_stroke"
                    android:layout_height="80dp"
                    android:padding="3dp"
                    android:src="@drawable/ic_total_employee"
                    app:layout_constraintBottom_toTopOf="@+id/main_tv1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/main_tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_tv1"
                    android:textStyle="bold"
                    android:layout_marginTop="4dp"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView1" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardElevation="15dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="15dp"
            android:layout_height="160dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="80dp"
                    android:background="@drawable/main_image_bg_stroke"
                    android:layout_height="80dp"
                    android:padding="3dp"
                    android:src="@drawable/ic_employee_attendance"
                    app:layout_constraintBottom_toTopOf="@+id/main_tv2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/main_tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_tv2"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_marginTop="4dp"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="20dp"
        android:layout_height="wrap_content" >

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            app:cardElevation="15dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="15dp"
            android:layout_height="160dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="80dp"
                    android:background="@drawable/main_image_bg_stroke"
                    android:layout_height="80dp"
                    android:padding="3dp"
                    android:src="@drawable/ic_events"
                    app:layout_constraintBottom_toTopOf="@+id/main_tv3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/main_tv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_tv3"
                    android:textStyle="bold"
                    android:layout_marginTop="4dp"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            app:cardElevation="15dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="15dp"
            android:layout_height="160dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="80dp"
                    android:background="@drawable/main_image_bg_stroke"
                    android:layout_height="80dp"
                    android:padding="3dp"
                    android:src="@drawable/ic_payroll"
                    app:layout_constraintBottom_toTopOf="@+id/main_tv4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/main_tv4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_tv4"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_marginTop="4dp"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView4" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="20dp"
        android:layout_height="wrap_content" >

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            app:cardElevation="15dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="15dp"
            android:layout_height="160dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="80dp"
                    android:background="@drawable/main_image_bg_stroke"
                    android:layout_height="80dp"
                    android:padding="3dp"
                    android:src="@drawable/ic_calendar_settings"
                    app:layout_constraintBottom_toTopOf="@+id/main_tv5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/main_tv5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_tv5"
                    android:textStyle="bold"
                    android:layout_marginTop="4dp"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView5" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>


</LinearLayout>
